use udp webrtc datachannels for all communication (#119)
* Use udp webrtc datachannels for all communication
* Lots of bugfixes and some performance improvements.
